[project]
name = "grave-cli"
version = "2.4.2"
description = "GRAVE — Git Repository Abandonment & Vintage Explorer. Dig up dead, forgotten, and vintage GitHub repositories."
readme = "pypi.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ul0gic" },
]
keywords = ["github", "archaeology", "cli", "abandoned", "vintage", "repositories"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=14.3.2",
]

[project.urls]
Homepage = "https://github.com/ul0gic/grave"
Repository = "https://github.com/ul0gic/grave"
Issues = "https://github.com/ul0gic/grave/issues"

[project.scripts]
grave = "grave.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "RET",  # flake8-return
    "TCH",  # flake8-type-checking
]
ignore = []

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["grave"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
